@@ -9,6 +9,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - [VULTURED] Delay option on api_request calls
 - [FRONTEND] Rsyslog queue settings
+- [API_PARSER] Add Possibility for Collectors to stop early without reporting errors
+### Changed
+- [API_PARSER] [BLACKBERRY_CYLANCE] Stop collector earlier and wait for next run when rate-limited by the API
 ### Fixed
 - [API_PARSER] [BEYONDTRUST_REPORTINGS] Fix parsing of support session logs
 
